# learnvulkan

./: .clang-format  .gitignore  CMakeLists.txt  GEMINI.md  compile_shader.bat  note.md
doc/: notes.md
src/00-test/: 00-test.cc
src/01-drawing-a-triangle/: 01-drawing-a-triangle.cc
src/02-vertex-buffer/: 02-vertex-buffer.cc
src/03-uniform-buffer/: 03-uniform-buffer.cc
src/04-texture/: 04-shader.vert  04-texture.cc
src/05-base-triangle/: 05-base-triangle.cc  05-shader.frag  05-shader.vert
src/06-depth-buffer/: 06-depth-buffer.cc
src/06-two-cubes/: 06-two-cubes.cc  06-two-cubes.frag
src/07-multicubes/: 07-multicubes.cc
src/07-two-textures/: 07-two-textures.cc
src/08-move-camera/: 08-move-camera.cc
src/09-gltf/: 09-gltf.cc  09-shader.frag  09-shader.vert
src/10-pbr-basic/: 10-pbr-basic.cc  10-pbr-basic.frag  10-pbr-basic.vert  10-shader.frag  10-shader.vert
src/11-pbr-ibl/: 11-pbr-ibl.cc  11-shader.frag
src/base/: camera.cc  camera.h  commandline_parser.h  directional_light.cc  directional_light.h  input.cc  input.h  lvk_log.cc  lvk_log.h  lvk_math.cc  lvk_math.h  material.h  mesh_loader.cc  mesh_loader.h  node.cc  node.h  primitives.cc  primitives.h  scene.cc  scene.h  transform.cc  transform.h  vertex_data.cc  vertex_data.h  vulkan_app.cc  vulkan_app.h  vulkan_buffer.cc  vulkan_buffer.h  vulkan_context.cc  vulkan_context.h  vulkan_debug.cc  vulkan_debug.h  vulkan_device.cc  vulkan_device.h  vulkan_initializers.h  vulkan_pipelinebuilder.cc  vulkan_pipelinebuilder.h  vulkan_renderpass.cc  vulkan_renderpass.h  vulkan_renderpass_base.cc  (+13 more)
src/shaders/: shadow.vert  uioverlay.frag  uioverlay.vert
